@@ -1,3 +1,7 @@
+2009-11-18  Bernhard Herzog  <bernhard.herzog@intevation.de>
+
+	* vc-hg.el (vc-hg-diff): Fix last patch: do not change directory.
+
 2009-11-18  Juanma Barranquero  <lekktu@gmail.com>
 
 	* font-setting.el (font-use-system-font): Declare for byte-compiler.
